# wrapper_dbpoweramp

./: .gitignore  ConvertingWindows.db-journal  README.md  _cascade_perf.py  _patch_quoting2.py  exceptions.py  main.py  mkdocs.yml  presets.yaml  purge_opus.py  pyproject.toml  requirements.txt  settings.yaml  test_results.py  test_results.txt  timed_wrapper.py
.planning/: ROADMAP.md  STATE.md  md5sum-staging-CONTEXT.md
_docs_site/: .gitignore  .ruby-version  CONTEXT.md  Gemfile  Makefile  README.md  Rakefile  _config.yml  hugo.yaml  package.json
audio/: inspector.py
backends/: base.py  native_dbpoweramp.py  native_ffmpeg.py  registry.py  wine_dbpoweramp.py
cli/: args.py
config/: preset_loader.py  settings_loader.py
docs/: api.md  architecture.md  backends.md  cli.md  configuration.md  error-handling.md  file-index.md  index.md  installation.md  lossy-handling.md  modules.md  overview.md  presets.md  sidecar-files.md  testing.md  workflow.md
execution/: runner.py
history/: db.py
index/: __init__.py  builder.py  cleanup.py  scanner.py
jobs/: builder.py
models/: types.py
pathing/: resolver.py
sidecars/: manager.py
src/: exceptions.py
tests/: _quick_test.py  conftest.py  manual_test.py  manual_test_results.txt  run_all_tests.ps1  test_all.py  test_app_context.py  test_audio_integrity.py  test_backend_quoting.py  test_conversion_db.py  test_db_cli.py  test_db_version_api.py  test_dbpoweramp_cli.py  test_failed_only.py  test_history_migrations.py  test_index_builder.py  test_lifecycle_tempdir.py  test_long_path.py  test_lossy_classify.py  (+18 more)
(+231 files in other folders)
