# User override: project is intentionally not a pip package, this manifest exists only
# so `uv` can manage dependencies. Do not install this as a package.
[project]
name = "dbpamp-wrapper"
version = "0.1.0"
description = "dBpoweramp CoreConverter wrapper for Linux via Wine, with native ffmpeg fallback"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src", "main.py", "presets.yaml", "settings.yaml"]
